...
            clearHandler()
        setRegion(item)
    }

    return (
        <View style={styles.container}>
            <Text testID={'retailCalculatorTitleId'} style={styles.title}>{constants.title}</Text>

            <CalculatorInputs
                numberOfItems={numberOfItems}
                pricePerItem={pricePerItem}
                setNumberOfItems={setNumberOfItems}
                setPricePerItem={setPricePerItem}
...
